--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -6,5 +6,15 @@
     min-width: 100px;
     border: 2px solid currentColor;
     padding: 10px 24px;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    letter-spacing: 0.1em;
+    font-weight: 600;
+    transition: color 300ms ease-in-out;
+    &:hover, &:focus{
+        color: $bg-color;
+    }
 
 }
