--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -1,5 +1,5 @@
 .gallery{
-    background-image: url(./images/86d9c6c21bf26d2b3ed027f777d359c7.png);
+    background-image: url(../images/86d9c6c21bf26d2b3ed027f777d359c7.png);
     height: 1100px;
     padding: 0 90px;
     background-position: bottom;
@@ -59,13 +59,6 @@
 }
 .gallery__button{
     color: rgba(255, 255, 255, 0.8);
-    cursor: pointer;
-    text-transform: uppercase;
-    font-family: "Roboto", sans-serif;
-    font-size: 14px;
-    letter-spacing: 0.1em;
-    font-weight: 600;
-    transition: color 300ms ease-in-out;
     &:hover, &:focus{
         color: $bg-color;
     }
