--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background-image: url(./images/2b1966ee8e9994d4051d1154196acc0e.jpeg);
+    background-image: url(../images/2b1966ee8e9994d4051d1154196acc0e.jpeg);
     background-repeat: no-repeat;
     height: 800px;
     text-align: center;
