--- a/sass/components/_invitation.scss
+++ b/sass/components/_invitation.scss
@@ -1,42 +1,77 @@
 .invitation {
-background-image: url(./images/8489c5e2eb1c696fba409c94e0ca77d1.png);
+background-image: url(../images/8489c5e2eb1c696fba409c94e0ca77d1.png);
 padding-top: 0;
 background-position: top;
 display: flex;
 align-items: center;
-}
+transform: translateY(-120px);
 
-.invitation__gallery{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 33.333%;
-   
-    gap: 20px;
 }
-
 
 .invitation__text-thumb{
     width: 50%;
     text-align: left;
     padding: 20px;
+    padding-right: 80px;
 }
+
+.invitation__gallery{
+    margin: 20px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    width: 1000px;
+    height: 480px;
+
+ 
+}
+
 .invitation__photo{
-    width: 300px;
+    display: block;
+    width: calc((100% - 4 * 20px) / 3);
+    object-fit: cover;
     &:nth-child(1){
-        height: calc(((598px - 2*60px) - 20px) /2);
+        height: 220px;
     }
     &:nth-child(2){
-        height: calc(((598px - 2*60px) - 20px) /2);
+        height: 140px;
     }
     &:nth-child(3){
-        height: 100px;
+        height: 220px;
     }
-    // // &:nth-child(4){
-    // //     height: calc(((598px - 2*60px) - 40px) /3);
-    // // }
-    // // &:nth-child(5){
-    // //     height: calc(((598px - 2*60px) - 40px) /3);
-    // }
+    &:nth-child(4){
+        height: 220px;
+    }
+    &:nth-child(5){
+        transform: translateY(-80px);
+        height: 140px;
+    }
+    &:nth-child(6){
+        height: 220px;
+    }
+    &:nth-child(7){
+        transform: translateY(-160px);
+        height: 140px;
+    }
+}
 
+.invitation__subtitle{
+    display: block;
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 40px;
+    width: 300px ;
+    text-transform: uppercase;
+}
+.invitation__description{
+    margin-bottom: 40px;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.005em;
+    color: rgba(42, 42, 42, 0.8);
+}
+.invitation__button{
+    color: rgba(42, 42, 42, 0.8);
+
+}
