--- a/sass/components/_whereToGo.scss
+++ b/sass/components/_whereToGo.scss
@@ -1,16 +1,16 @@
 .travel{
     padding-top: 0;
     padding-bottom: 0;
+    transform: translatey(-120px);
+    pointer-events: none;
 }
-.travel__image{
-    transform: translateY(-160px);
-}
-.travel__map-tumb{
-    display: flex;
-    align-items: center;
-    background-image: url(./images/41695f7aabdb8eaa9fd6df8a3f7d4473.png);
-    block-size: contain;
+
+.travel__map-thumb{
+    background-image: url(../images/41695f7aabdb8eaa9fd6df8a3f7d4473.png);
     background-position: bottom;
+    display: flex;
+
+
     
 }
 
@@ -37,8 +37,10 @@
     line-height: 1.5;
     font-weight: 500;
 }
-.pointer{
-    color: tomato;
-    outline: 1px solid red;
+// .pointer{
+//     fill: black;
+//     object-fit: contain;
+//     color: tomato;
+//     outline: 1px solid red;
 
-}
+// }
