--- a/sass/components/_whereToGo.scss
+++ b/sass/components/_whereToGo.scss
@@ -1,46 +1,63 @@
-.travel{
-    padding-top: 0;
-    padding-bottom: 0;
-    transform: translatey(-120px);
-    pointer-events: none;
+.travel {
+	padding-top: 0;
+	padding-bottom: 0;
+	transform: translatey(-120px);
+	pointer-events: none;
 }
 
-.travel__map-thumb{
-    background-image: url(../images/41695f7aabdb8eaa9fd6df8a3f7d4473.png);
-    background-position: bottom;
-    display: flex;
-
-
-    
+.travel__map-thumb {
+	background-image: url(../images/41695f7aabdb8eaa9fd6df8a3f7d4473.png);
+	background-position: bottom;
+	display: flex;
 }
 
-.travel__thumb{
-    padding-left: 60px;
-    padding-right: 43px;
-    text-align: left;
-    width: 50%;
-    padding-bottom: 90px;
-}   
-.travel__map{
-    width: 50%;
-    position: relative;
+.travel__thumb {
+	padding-left: 60px;
+	padding-right: 43px;
+	text-align: left;
+	width: 50%;
+	padding-bottom: 90px;
+}
+.travel__map {
+	width: 50%;
+	position: relative;
 }
 
-.travel__subtitle{
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 0.05em;
-    margin-bottom: 20px;
+.travel__subtitle {
+	text-transform: uppercase;
+	font-weight: 700;
+	letter-spacing: 0.05em;
+	margin-bottom: 20px;
 }
-.travel_description{
-    font-size: 14px;
-    line-height: 1.5;
-    font-weight: 500;
+.travel_description {
+	font-size: 14px;
+	line-height: 1.5;
+	font-weight: 500;
 }
-// .pointer{
-//     fill: black;
-//     object-fit: contain;
-//     color: tomato;
-//     outline: 1px solid red;
+.pointer {
+	fill: #3a6aa7;
+	outline: 1px solid red;
+    height: 40px;
+    width: auto;
 
-// }
+	&:nth-child(1) {
+		position: absolute;
+		top: 25px;
+		left: 52px;
+	}
+	&:nth-child(2) {
+		position: absolute;
+		top: 180px;
+		left: 197px;
+	}
+	&:nth-child(3) {
+		position: absolute;
+        top: 76px;
+        left: 308px;
+	}
+    &:nth-child(4) {
+		position: absolute;
+        top: 179px;
+        left: 419px;
+	}
+}
