--- a/css/main.css
+++ b/css/main.css
@@ -195,12 +195,12 @@ html {
       flex-basis: 280px;
   gap: 100px;
   padding: 0 250px;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 
 .about__image {
   display: block;
-  width: 25%;
+  width: 20%;
   margin: 0 auto;
 }
 
@@ -287,9 +287,8 @@ html {
 .travel {
   padding-top: 0;
   padding-bottom: 0;
-  -webkit-transform: translatey(-120px);
-          transform: translatey(-120px);
   pointer-events: none;
+  margin-top: -140px;
 }
 
 .travel__map-thumb {
@@ -328,7 +327,6 @@ html {
 
 .pointer {
   fill: #3a6aa7;
-  outline: 1px solid red;
   height: 40px;
   width: auto;
 }
@@ -363,8 +361,6 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-transform: translateY(-120px);
-          transform: translateY(-120px);
 }
 
 .invitation__text-thumb {
