--- a/sass/utilities/_base.scss
+++ b/sass/utilities/_base.scss
@@ -24,3 +24,9 @@ html {
 	text-align: center;
 	
 }
+// img:hover{
+// 	cursor: pointer;
+// 	transform: scale(1.2) !important;
+// 	border-radius: 8px;
+// 	z-index: 200;
+// }
