--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -12,8 +12,11 @@
     font-size: 14px;
     letter-spacing: 0.1em;
     font-weight: 600;
-    transition: color 300ms ease-in-out;
+    transition: color 400ms ease-in-out, transform 400ms ease, border-radius 500ms ease-in-out 400ms;
     &:hover, &:focus{
+        transform: scale(1.1);
+        border-radius: 4px;
+
         color: $bg-color;
     }
 
