--- a/sass/components/_invitation.scss
+++ b/sass/components/_invitation.scss
@@ -1,76 +1,89 @@
 .invitation {
-background-image: url(../images/8489c5e2eb1c696fba409c94e0ca77d1.png);
-padding-top: 0;
-background-position: top;
-display: flex;
-align-items: center;
-
+	background-image: url(../images/8489c5e2eb1c696fba409c94e0ca77d1.png);
+	padding-top: 0;
+	background-position: top;
+	display: flex;
+	align-items: center;
 }
 
-.invitation__text-thumb{
-    width: 50%;
-    text-align: left;
-    padding: 20px;
-    padding-right: 80px;
+.invitation__text-thumb {
+	width: 50%;
+	text-align: left;
+	padding: 20px;
+	padding-right: 80px;
 }
 
-.invitation__gallery{
-    margin: 20px 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    width: 1000px;
-    height: 480px;
-
- 
+.invitation__gallery {
+	margin: 20px 0;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 20px;
+	width: 1000px;
+	height: 480px;
+}
+.column {
+    margin-top: 20px;
+	flex: 25%;
+	max-width: 25%;
+	gap: 20px;
+    
+	& > img {
+		vertical-align: middle;
+		width: 100%;
+		object-fit: cover;
+        transition: transform 400ms ease-in-out 50ms, border-radius 400ms ease 50ms;
+        &:not(:last-child){
+            margin-bottom: 20px;
+        }
+    
+	}
+    
+	& > img:hover {
+		// cursor: pointer;
+		transform: scale(1.15);
+		border-radius: 8px;
+		z-index: 200;
+	}
 }
 
-.invitation__photo{
-    display: block;
-    width: calc((100% - 4 * 20px) / 3);
-    object-fit: cover;
-    &:nth-child(1){
-        height: 220px;
-    }
-    &:nth-child(2){
-        height: 140px;
-    }
-    &:nth-child(3){
-        height: 220px;
-    }
-    &:nth-child(4){
-        height: 220px;
-    }
-    &:nth-child(5){
-        transform: translateY(-80px);
-        height: 140px;
-    }
-    &:nth-child(6){
-        height: 220px;
-    }
-    &:nth-child(7){
-        transform: translateY(-160px);
-        height: 140px;
-    }
+.item-1 {
+	height: 220px;
+}
+.item-2 {
+	height: 220px;
+}
+.item-3 {
+	height: 140px;
+}
+.item-4 {
+	height: 140px;
+}
+.item-5 {
+	height: 140px;
+}
+.item-6 {
+	height: 220px;
+}
+.item-7 {
+	height: 220px;
 }
 
-.invitation__subtitle{
-    display: block;
-    font-size: 18px;
-    font-weight: 700;
-    margin-bottom: 40px;
-    width: 300px ;
-    text-transform: uppercase;
+.invitation__subtitle {
+	display: block;
+	font-size: 18px;
+	font-weight: 700;
+	margin-bottom: 40px;
+	width: 300px;
+	text-transform: uppercase;
 }
-.invitation__description{
-    margin-bottom: 40px;
-    font-size: 16px;
-    font-weight: 500;
-    letter-spacing: 0.005em;
-    color: rgba(42, 42, 42, 0.8);
+.invitation__description {
+	margin-bottom: 40px;
+	font-size: 16px;
+	font-weight: 500;
+	letter-spacing: 0.005em;
+	color: rgba(42, 42, 42, 0.8);
 }
-.invitation__button{
-    color: rgba(42, 42, 42, 0.8);
-
+.invitation__button {
+	color: rgba(42, 42, 42, 0.8);
 }
