--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -16,8 +16,7 @@
     &:hover, &:focus{
         transform: scale(1.1);
         border-radius: 4px;
-
-        color: $bg-color;
+        color: #fff;
     }
 
 }
