--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ svg:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
   border-radius: 4px;
-  color: #6b86a4;
+  color: #fff;
 }
 
 .hero {
@@ -213,6 +213,14 @@ svg:hover {
   display: block;
   width: 20%;
   margin: 0 auto;
+  -webkit-transition: -webkit-transform 400ms ease-in-out 50ms;
+  transition: -webkit-transform 400ms ease-in-out 50ms;
+  transition: transform 400ms ease-in-out 50ms;
+  transition: transform 400ms ease-in-out 50ms, -webkit-transform 400ms ease-in-out 50ms;
+}
+.about__image:hover {
+  -webkit-transform: scale(1.15);
+          transform: scale(1.15);
 }
 
 .gallery {
@@ -223,56 +231,58 @@ svg:hover {
 }
 
 .gallery__pictureset {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   gap: 20px;
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
-  -webkit-transform: translateY(40px);
-          transform: translateY(40px);
-  height: 900px;
 }
-
-.gallery__image {
-  display: inline-block;
-  width: calc((100% - 80px) / 3);
+.gallery__pictureset img {
+  width: 326.6666666667px;
   -o-object-fit: cover;
      object-fit: cover;
-  background-color: transpatent;
+  -webkit-transition: border-radius 400ms ease 200ms, -webkit-transform 400ms ease-in-out 200ms;
+  transition: border-radius 400ms ease 200ms, -webkit-transform 400ms ease-in-out 200ms;
+  transition: transform 400ms ease-in-out 200ms, border-radius 400ms ease 200ms;
+  transition: transform 400ms ease-in-out 200ms, border-radius 400ms ease 200ms, -webkit-transform 400ms ease-in-out 200ms;
 }
-.gallery__image:first-child {
+.gallery__pictureset img:not(:last-child) {
+  margin-bottom: 20px;
+}
+.gallery__pictureset img:hover {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+  border-radius: 8px;
+  z-index: 200;
+}
+
+.image-item-1 {
   margin-top: 50px;
   height: 500px;
 }
-.gallery__image:nth-child(2) {
+
+.image-item-2 {
+  height: 280px;
+}
+
+.image-item-3 {
   height: 300px;
 }
-.gallery__image:nth-child(3) {
+
+.image-item-4 {
+  height: 550px;
+}
+
+.image-item-5 {
   margin-top: 50px;
   height: 400px;
 }
-.gallery__image:nth-child(4) {
-  height: 280px;
-}
-.gallery__image:nth-child(5) {
-  height: 550px;
-  -webkit-transform: translateY(-250px);
-          transform: translateY(-250px);
-}
-.gallery__image:nth-child(6) {
+
+.image-item-6 {
   height: 380px;
-  -webkit-transform: translateY(-100px);
-          transform: translateY(-100px);
 }
 
 .gallery__title {
@@ -290,9 +300,6 @@ svg:hover {
 
 .gallery__button {
   color: rgba(255, 255, 255, 0.8);
-}
-.gallery__button:hover, .gallery__button:focus {
-  color: #6b86a4;
 }
 
 .travel {
@@ -488,5 +495,8 @@ svg:hover {
 }
 
 .invitation__button {
+  color: #6b86a4;
+}
+.invitation__button:hover {
   color: rgba(42, 42, 42, 0.8);
 }/*# sourceMappingURL=main.css.map */
