--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,18 +1,67 @@
 .hero {
-    background-image: url(../images/2b1966ee8e9994d4051d1154196acc0e.jpeg);
-    background-repeat: no-repeat;
-    height: 800px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    clip-path: polygon(0% 0%, 100% 0, 100% 75%, 50% 100%, 0 75%);
+	background-image: url(../images/2b1966ee8e9994d4051d1154196acc0e.jpeg);
+	background-repeat: no-repeat;
+	height: 800px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	clip-path: polygon(0% 0%, 100% 0, 100% 75%, 50% 100%, 0 75%);
 }
-.hero__subtitle{
-    width: 534px;
-    font-weight: 500;
-    display: block;
-    margin: 0 auto;
-    letter-spacing: 0.25rem;
-    color: rgba(255, 255, 255,0.8);
+
+.animation-first {
+	position: relative;
+	animation: animatetop 1200ms;
+}
+.animation-second{
+    position: relative;
+	animation: animatebottom 900ms;
+    animation-delay: 900ms;
+    animation-fill-mode: backwards;
+}
+
+.hero__subtitle {
+	width: 534px;
+	font-weight: 500;
+	display: block;
+	margin: 0 auto;
+	letter-spacing: 0.25rem;
+	color: rgba(255, 255, 255, 0.8);
+    position: relative;
+    animation: animateleft 900ms;
+    animation-delay: 1500ms;
+    animation-fill-mode: backwards;
+
+
+}
+
+@keyframes animatetop {
+	from {
+		top: -300px;
+		opacity: 0;
+	}
+	to {
+		top: 0;
+		opacity: 1;
+	}
+}
+@keyframes animateleft {
+	from {
+		left: -300px;
+		opacity: 0;
+	}
+	to {
+		left: 0;
+		opacity: 1;
+	}
+}
+@keyframes animatebottom {
+	from {
+		bottom: -300px;
+		opacity: 0;
+	}
+	to {
+		bottom: 0;
+		opacity: 1;
+	}
 }
