--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,8 @@
 @import "./sass/utilities/local-reset";
 @import "./sass/utilities/breakpoints";
 @import "./sass/utilities/varibles";
+@import "./sass/utilities/animations";
+
 
 
 @import "./sass/utilities/utilities";
