--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,143 @@ img {
   height: auto;
 }
 
+@-webkit-keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes animateleft {
+  from {
+    left: -300px;
+    opacity: 0;
+  }
+  to {
+    left: 0;
+    opacity: 1;
+  }
+}
+@keyframes animateleft {
+  from {
+    left: -300px;
+    opacity: 0;
+  }
+  to {
+    left: 0;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes animatebottom {
+  from {
+    bottom: -300px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+@keyframes animatebottom {
+  from {
+    bottom: -300px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes animatetop_arrow {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 230px;
+    opacity: 1;
+  }
+}
+@keyframes animatetop_arrow {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 230px;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes breathing {
+  0% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+  70% {
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+  100% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+}
+@keyframes breathing {
+  0% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+  70% {
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+  100% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+}
+@-webkit-keyframes breathing-light {
+  0% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+  70% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+}
+@keyframes breathing-light {
+  0% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+  70% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+  }
+}
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -120,7 +257,7 @@ html {
   text-align: center;
 }
 
-svg:hover {
+.pointer:hover {
   cursor: pointer;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
@@ -140,16 +277,17 @@ svg:hover {
   font-size: 14px;
   letter-spacing: 0.1em;
   font-weight: 600;
-  -webkit-transition: color 400ms ease-in-out, border-radius 500ms ease-in-out 400ms, -webkit-transform 400ms ease;
-  transition: color 400ms ease-in-out, border-radius 500ms ease-in-out 400ms, -webkit-transform 400ms ease;
-  transition: color 400ms ease-in-out, transform 400ms ease, border-radius 500ms ease-in-out 400ms;
-  transition: color 400ms ease-in-out, transform 400ms ease, border-radius 500ms ease-in-out 400ms, -webkit-transform 400ms ease;
+  -webkit-transition: color 400ms ease-in-out, border-radius 500ms ease-in-out 400ms, scale 300ms ease-in-out, -webkit-transform 400ms ease;
+  transition: color 400ms ease-in-out, border-radius 500ms ease-in-out 400ms, scale 300ms ease-in-out, -webkit-transform 400ms ease;
+  transition: color 400ms ease-in-out, transform 400ms ease, border-radius 500ms ease-in-out 400ms, scale 300ms ease-in-out;
+  transition: color 400ms ease-in-out, transform 400ms ease, border-radius 500ms ease-in-out 400ms, scale 300ms ease-in-out, -webkit-transform 400ms ease;
 }
 .button:hover, .button:focus {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  scale: 1.2;
   border-radius: 4px;
   color: #fff;
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
 }
 
 .hero {
@@ -203,99 +341,30 @@ svg:hover {
 }
 
 .hero__icon-wrapper {
-  display: block;
+  display: inline-block;
   fill: rgba(128, 128, 128, 0.5);
   position: relative;
-  -webkit-animation: animatetop_arrow 1200ms;
-          animation: animatetop_arrow 1200ms;
+  -webkit-animation: animatetop_arrow 1200ms, breathing 2000ms normal infinite;
+          animation: animatetop_arrow 1200ms, breathing 2000ms normal infinite;
   -webkit-animation-delay: 1700ms;
           animation-delay: 1700ms;
-  top: 220px;
+  top: 230px;
   -webkit-animation-fill-mode: backwards;
           animation-fill-mode: backwards;
+  -webkit-transition: scale 300ms ease-in-out;
+  transition: scale 300ms ease-in-out;
+}
+.hero__icon-wrapper:hover, .hero__icon-wrapper:focus {
+  scale: 1.4;
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
 }
 
-@-webkit-keyframes animatetop {
-  from {
-    top: -300px;
-    opacity: 0;
-  }
-  to {
-    top: 0;
-    opacity: 1;
-  }
+.hero__arrow-icon {
+  -webkit-animation: 5s ease-out infinite normal;
+          animation: 5s ease-out infinite normal;
 }
 
-@keyframes animatetop {
-  from {
-    top: -300px;
-    opacity: 0;
-  }
-  to {
-    top: 0;
-    opacity: 1;
-  }
-}
-@-webkit-keyframes animateleft {
-  from {
-    left: -300px;
-    opacity: 0;
-  }
-  to {
-    left: 0;
-    opacity: 1;
-  }
-}
-@keyframes animateleft {
-  from {
-    left: -300px;
-    opacity: 0;
-  }
-  to {
-    left: 0;
-    opacity: 1;
-  }
-}
-@-webkit-keyframes animatebottom {
-  from {
-    bottom: -300px;
-    opacity: 0;
-  }
-  to {
-    bottom: 0;
-    opacity: 1;
-  }
-}
-@keyframes animatebottom {
-  from {
-    bottom: -300px;
-    opacity: 0;
-  }
-  to {
-    bottom: 0;
-    opacity: 1;
-  }
-}
-@-webkit-keyframes animatetop_arrow {
-  from {
-    top: -300px;
-    opacity: 0;
-  }
-  to {
-    top: 220px;
-    opacity: 1;
-  }
-}
-@keyframes animatetop_arrow {
-  from {
-    top: -300px;
-    opacity: 0;
-  }
-  to {
-    top: 220px;
-    opacity: 1;
-  }
-}
 .about {
   text-align: center;
 }
@@ -330,14 +399,19 @@ svg:hover {
   display: block;
   width: 20%;
   margin: 0 auto;
-  -webkit-transition: -webkit-transform 400ms ease-in-out 50ms;
-  transition: -webkit-transform 400ms ease-in-out 50ms;
-  transition: transform 400ms ease-in-out 50ms;
-  transition: transform 400ms ease-in-out 50ms, -webkit-transform 400ms ease-in-out 50ms;
+  -webkit-transition: scale 300ms ease-in-out, -webkit-transform 400ms ease-in-out 50ms;
+  transition: scale 300ms ease-in-out, -webkit-transform 400ms ease-in-out 50ms;
+  transition: transform 400ms ease-in-out 50ms, scale 300ms ease-in-out;
+  transition: transform 400ms ease-in-out 50ms, scale 300ms ease-in-out, -webkit-transform 400ms ease-in-out 50ms;
+  -webkit-animation: breathing-light 2000ms normal infinite;
+          animation: breathing-light 2000ms normal infinite;
+  -webkit-animation-delay: 5.9s;
+          animation-delay: 5.9s;
 }
 .about__image:hover {
-  -webkit-transform: scale(1.15);
-          transform: scale(1.15);
+  scale: 1.15;
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
 }
 
 .gallery {
@@ -361,10 +435,11 @@ svg:hover {
   width: 326.6666666667px;
   -o-object-fit: cover;
      object-fit: cover;
-  -webkit-transition: border-radius 400ms ease 200ms, -webkit-transform 400ms ease-in-out 200ms;
-  transition: border-radius 400ms ease 200ms, -webkit-transform 400ms ease-in-out 200ms;
-  transition: transform 400ms ease-in-out 200ms, border-radius 400ms ease 200ms;
-  transition: transform 400ms ease-in-out 200ms, border-radius 400ms ease 200ms, -webkit-transform 400ms ease-in-out 200ms;
+  z-index: 0;
+  -webkit-transition: border-radius 400ms ease 150ms, z-index 300ms ease-in-out 150ms, -webkit-transform 400ms ease-in-out 150ms;
+  transition: border-radius 400ms ease 150ms, z-index 300ms ease-in-out 150ms, -webkit-transform 400ms ease-in-out 150ms;
+  transition: transform 400ms ease-in-out 150ms, border-radius 400ms ease 150ms, z-index 300ms ease-in-out 150ms;
+  transition: transform 400ms ease-in-out 150ms, border-radius 400ms ease 150ms, z-index 300ms ease-in-out 150ms, -webkit-transform 400ms ease-in-out 150ms;
 }
 .gallery__pictureset img:not(:last-child) {
   margin-bottom: 20px;
@@ -373,7 +448,7 @@ svg:hover {
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
   border-radius: 8px;
-  z-index: 200;
+  z-index: 1;
 }
 
 .image-item-1 {
@@ -417,6 +492,10 @@ svg:hover {
 
 .gallery__button {
   color: rgba(255, 255, 255, 0.8);
+  -webkit-animation: breathing-light 2000ms normal infinite;
+          animation: breathing-light 2000ms normal infinite;
+  -webkit-animation-delay: 5.9s;
+          animation-delay: 5.9s;
 }
 
 .travel {
@@ -613,6 +692,10 @@ svg:hover {
 
 .invitation__button {
   color: #6b86a4;
+  -webkit-animation: breathing-light 2000ms normal infinite;
+          animation: breathing-light 2000ms normal infinite;
+  -webkit-animation-delay: 5.9s;
+          animation-delay: 5.9s;
 }
 .invitation__button:hover {
   color: rgba(42, 42, 42, 0.8);
