--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -26,8 +26,12 @@
     display: block;
     width: calc(100% / 5);
     margin: 0 auto;
-    transition: transform 400ms ease-in-out 50ms;
+    transition: transform 400ms ease-in-out 50ms, scale 300ms ease-in-out;
+
+    animation: breathing-light 2000ms normal infinite;
+	animation-delay: 5.9s;
     &:hover{
-        transform: scale(1.15);
+        scale: 1.15;
+        animation-play-state: paused;
     }
 }
