--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -12,15 +12,16 @@
 	& img {
 		width: calc((1200px - 2 * 110px) / 3);
 		object-fit: cover;
+		z-index: 0;
 
-		transition: transform 400ms ease-in-out 200ms, border-radius 400ms ease 200ms;
+		transition: transform 400ms ease-in-out 150ms, border-radius 400ms ease 150ms, z-index 300ms ease-in-out 150ms;
 		&:not(:last-child) {
 			margin-bottom: 20px;
 		}
 		&:hover{
 			transform: scale(1.5);
 			border-radius: 8px;
-			z-index: 200;
+			z-index: 1;
 		}
 	}
 }
@@ -60,4 +61,6 @@
 }
 .gallery__button {
 	color: rgba(255, 255, 255, 0.8);
+	animation: breathing-light 2000ms normal infinite;
+	animation-delay: 5.9s;
 }
