--- a/main.scss
+++ b/main.scss
@@ -2,6 +2,7 @@
 @import "./sass/utilities/breakpoints";
 @import "./sass/utilities/varibles";
 @import "./sass/utilities/animations";
+@import "./sass/components/modals";
 
 
 
