--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,87 @@ img {
             transform: scale(0.95);
   }
 }
+.modal {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgb(255, 255, 255)), color-stop(73%, rgba(226, 226, 226, 0.9836309524)), to(rgb(114, 137, 151)));
+  background: linear-gradient(rgb(255, 255, 255) 0%, rgba(226, 226, 226, 0.9836309524) 73%, rgb(114, 137, 151) 100%);
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.location {
+  margin-bottom: 10px;
+}
+
+.modal__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 40px;
+  margin-bottom: 40px;
+}
+.modal__container > a {
+  outline: none;
+}
+.modal__container > a > img {
+  border-radius: 10px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  -webkit-transition: -webkit-transform 250ms ease;
+  transition: -webkit-transform 250ms ease;
+  transition: transform 250ms ease;
+  transition: transform 250ms ease, -webkit-transform 250ms ease;
+  top: 40px;
+}
+.modal__container > a > img:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.modal__title {
+  position: relative;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.modal__descr {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  width: 350px;
+}
+.modal__descr > h3 {
+  margin-bottom: 25px;
+}
+
+.address {
+  display: block;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+.pointer--modal {
+  height: 18px;
+  fill: #3a6aa7;
+  margin-right: 12px;
+  width: auto;
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.location-svg {
+  fill: #3a6aa7;
+  height: 16px;
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -436,24 +517,31 @@ html {
   -o-object-fit: cover;
      object-fit: cover;
   z-index: 0;
-  -webkit-transition: border-radius 400ms ease 150ms, z-index 300ms ease-in-out 150ms, -webkit-transform 400ms ease-in-out 150ms;
-  transition: border-radius 400ms ease 150ms, z-index 300ms ease-in-out 150ms, -webkit-transform 400ms ease-in-out 150ms;
-  transition: transform 400ms ease-in-out 150ms, border-radius 400ms ease 150ms, z-index 300ms ease-in-out 150ms;
-  transition: transform 400ms ease-in-out 150ms, border-radius 400ms ease 150ms, z-index 300ms ease-in-out 150ms, -webkit-transform 400ms ease-in-out 150ms;
+  -webkit-transition: border-radius 100ms ease, z-index 300ms ease-in-out 150ms, -webkit-transform 200ms ease-in-out, -webkit-box-shadow 200ms ease;
+  transition: border-radius 100ms ease, z-index 300ms ease-in-out 150ms, -webkit-transform 200ms ease-in-out, -webkit-box-shadow 200ms ease;
+  transition: transform 200ms ease-in-out, border-radius 100ms ease, z-index 300ms ease-in-out 150ms, box-shadow 200ms ease;
+  transition: transform 200ms ease-in-out, border-radius 100ms ease, z-index 300ms ease-in-out 150ms, box-shadow 200ms ease, -webkit-transform 200ms ease-in-out, -webkit-box-shadow 200ms ease;
 }
 .gallery__pictureset img:not(:last-child) {
   margin-bottom: 20px;
 }
 .gallery__pictureset img:hover {
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
   border-radius: 8px;
   z-index: 1;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.gallery__image {
+  gap: 20px;
 }
 
 .image-item-1 {
   margin-top: 50px;
   height: 500px;
+  margin-bottom: 20px;
 }
 
 .image-item-2 {
@@ -462,6 +550,7 @@ html {
 
 .image-item-3 {
   height: 300px;
+  margin-bottom: 20px;
 }
 
 .image-item-4 {
@@ -471,6 +560,7 @@ html {
 .image-item-5 {
   margin-top: 50px;
   height: 400px;
+  margin-bottom: 20px;
 }
 
 .image-item-6 {
@@ -625,7 +715,8 @@ html {
   max-width: 25%;
   gap: 20px;
 }
-.column > img {
+
+.invitation__photo > img {
   vertical-align: middle;
   width: 100%;
   -o-object-fit: cover;
@@ -635,10 +726,7 @@ html {
   transition: transform 400ms ease-in-out 50ms, border-radius 400ms ease 50ms;
   transition: transform 400ms ease-in-out 50ms, border-radius 400ms ease 50ms, -webkit-transform 400ms ease-in-out 50ms;
 }
-.column > img:not(:last-child) {
-  margin-bottom: 20px;
-}
-.column > img:hover {
+.invitation__photo > img:hover {
   -webkit-transform: scale(1.15);
           transform: scale(1.15);
   border-radius: 8px;
@@ -647,6 +735,7 @@ html {
 
 .item-1 {
   height: 220px;
+  margin-bottom: 20px;
 }
 
 .item-2 {
@@ -655,10 +744,12 @@ html {
 
 .item-3 {
   height: 140px;
+  margin-bottom: 20px;
 }
 
 .item-4 {
   height: 140px;
+  margin-bottom: 20px;
 }
 
 .item-5 {
@@ -667,6 +758,7 @@ html {
 
 .item-6 {
   height: 220px;
+  margin-bottom: 20px;
 }
 
 .item-7 {
