--- a/sass/components/_invitation.scss
+++ b/sass/components/_invitation.scss
@@ -23,46 +23,49 @@
 	height: 480px;
 }
 .column {
-    margin-top: 20px;
+	margin-top: 20px;
 	flex: 25%;
 	max-width: 25%;
 	gap: 20px;
-    
-	& > img {
+
+
+
+} 	
+.invitation__photo > img{
 		vertical-align: middle;
 		width: 100%;
 		object-fit: cover;
-        transition: transform 400ms ease-in-out 50ms, border-radius 400ms ease 50ms;
-        &:not(:last-child){
-            margin-bottom: 20px;
-        }
-    
+		transition: transform 400ms ease-in-out 50ms, border-radius 400ms ease 50ms;
+
+		&:hover {
+			transform: scale(1.15);
+			border-radius: 8px;
+			z-index: 200;
+		}
 	}
-    
-	& > img:hover {
-		transform: scale(1.15);
-		border-radius: 8px;
-		z-index: 200;
-	}
-}
+
 
 .item-1 {
 	height: 220px;
+	margin-bottom: 20px;
 }
 .item-2 {
 	height: 220px;
 }
 .item-3 {
 	height: 140px;
+	margin-bottom: 20px;
 }
 .item-4 {
 	height: 140px;
+	margin-bottom: 20px;
 }
 .item-5 {
 	height: 140px;
 }
 .item-6 {
 	height: 220px;
+	margin-bottom: 20px;
 }
 .item-7 {
 	height: 220px;
@@ -87,9 +90,8 @@
 	color: $bg-color;
 	animation: breathing-light 2000ms normal infinite;
 	animation-delay: 5.9s;
-	
-	&:hover{
+
+	&:hover {
 		color: rgba(42, 42, 42, 0.8);
 	}
 }
-
