--- a/css/main.css
+++ b/css/main.css
@@ -202,9 +202,9 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
   gap: 40px;
   margin-bottom: 40px;
 }
@@ -212,6 +212,12 @@ img {
   outline: none;
 }
 .modal__container > a > img {
+  width: 350px;
+  height: 523px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 60%;
+     object-position: 60%;
   border-radius: 10px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
           box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -233,29 +239,32 @@ img {
 }
 
 .modal__descr {
-  background-color: #fff;
-  border-radius: 10px;
-  padding: 10px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 20px;
   width: 350px;
 }
 .modal__descr > h3 {
   margin-bottom: 25px;
 }
+.modal__descr > p:not(:last-child) {
+  margin-bottom: 10px;
+}
 
 .address {
+  margin: 0 auto;
   display: block;
   text-align: center;
   color: inherit;
   text-decoration: none;
   font-size: 16px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  width: 600px;
 }
 
 .pointer--modal {
   height: 18px;
   fill: #3a6aa7;
-  margin-right: 12px;
+  margin-right: 5px;
   width: auto;
   -webkit-transition: -webkit-transform 250ms ease-in-out;
   transition: -webkit-transform 250ms ease-in-out;
@@ -265,7 +274,7 @@ img {
 
 .location-svg {
   fill: #3a6aa7;
-  height: 16px;
+  height: 18px;
 }
 
 .visually-hidden {
