--- a/sass/components/_modals.scss
+++ b/sass/components/_modals.scss
@@ -8,18 +8,22 @@
 	border-radius: 10px;
 	padding: 20px;
 }
-.location{
+.location {
 	margin-bottom: 10px;
 }
 .modal__container {
 	display: flex;
-	align-items: center;
+	align-items: start;
 	gap: 40px;
 	margin-bottom: 40px;
 	& > a {
 		outline: none;
 	}
 	& > a > img {
+		width: 350px;
+		height: 523px;
+		object-fit: cover;
+		object-position: 60%;
 		border-radius: 10px;
 		box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 		transition: transform 250ms ease;
@@ -35,35 +39,38 @@
 	text-align: center;
 }
 .modal__descr {
-	background-color: #fff;
-	border-radius: 10px;
-	padding: 10px;
-	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	padding: 20px;
 
 	width: 350px;
 	& > h3 {
 		margin-bottom: 25px;
 	}
-
+	& > p:not(:last-child) {
+		margin-bottom: 10px;
+	}
 }
 .address {
-    display: block;
-    text-align: center;
+	margin: 0 auto;
+	display: block;
+	text-align: center;
 	color: inherit;
 	text-decoration: none;
 	font-size: 16px;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+	width: 600px;
 }
 
 .pointer--modal {
 	height: 18px;
 	fill: #3a6aa7;
-	margin-right: 12px;
+	margin-right: 5px;
 
 	width: auto;
 	transition: transform 250ms ease-in-out;
 }
 
-.location-svg{
-	fill:#3a6aa7;
-	height: 16px;
+.location-svg {
+	fill: #3a6aa7;
+	height: 18px;
 }
