--- a/css/main.css
+++ b/css/main.css
@@ -653,33 +653,35 @@ html {
 
 .pointer {
   fill: #3a6aa7;
-  height: 40px;
-  width: auto;
   -webkit-transition: -webkit-transform 250ms ease-in-out;
   transition: -webkit-transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
   z-index: 100;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  padding: 20px;
 }
 .pointer:nth-child(1) {
   position: absolute;
   top: 25px;
-  left: 52px;
+  left: 10px;
 }
 .pointer:nth-child(2) {
   position: absolute;
-  top: 180px;
-  left: 197px;
+  top: 160px;
+  left: 177px;
 }
 .pointer:nth-child(3) {
   position: absolute;
-  top: 76px;
-  left: 308px;
+  top: 60px;
+  left: 290px;
 }
 .pointer:nth-child(4) {
   position: absolute;
-  top: 179px;
-  left: 419px;
+  top: 159px;
+  left: 430px;
 }
 
 .invitation {
