--- a/main.scss
+++ b/main.scss
@@ -16,3 +16,4 @@
 @import "./sass/components/gallery";
 @import "./sass/components/whereToGo";
 @import "./sass/components/invitation";
+@import "./sass/components/footer";
