--- a/sass/components/_invitation.scss
+++ b/sass/components/_invitation.scss
@@ -6,6 +6,7 @@
 	background-position: top;
 	display: flex;
 	align-items: center;
+
 	gap: 50px;
 }
 
@@ -19,6 +20,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
+	flex-grow: 20%;
 	gap: 20px;
 }
 .column {
@@ -37,7 +39,7 @@
 		border-radius: 8px;
 		z-index: 200;
 	}
-}
+}	
 
 .item-1 {
 	height: 220px;
