--- a/sass/utilities/_base.scss
+++ b/sass/utilities/_base.scss
@@ -1,6 +1,10 @@
 html {
     scroll-behavior: smooth;
+	
 
+  }
+::-webkit-scrollbar {
+	display: none;
   }
 
 .body{
@@ -12,10 +16,7 @@ html {
 	font-weight: normal;
 	font-size: 14px;
 	letter-spacing: 0.03em;
-	line-height: 1.5;
-	
-
-    
+	line-height: 1.5;   
 }
 
 .container{
