--- a/css/main.css
+++ b/css/main.css
@@ -1072,13 +1072,13 @@ footer > p::before {
 }
 
 .chkbx:checked ~ .checkmark {
-  border-top: rgba(227, 225, 225, 0);
-  border-left: rgba(227, 225, 225, 0);
   border-radius: 0;
   width: 14px;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
-  border-color: rgb(62, 187, 9);
+  border: 3px solid rgb(62, 187, 9);
+  border-top: rgba(227, 225, 225, 0);
+  border-left: rgba(227, 225, 225, 0);
 }
 
 .form-button {
