--- a/css/main.css
+++ b/css/main.css
@@ -332,7 +332,7 @@ html {
   scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none;
 }
 
@@ -1054,11 +1054,13 @@ footer > p::before {
   width: 21px;
   height: 21px;
   border: 2px solid rgb(227, 225, 225);
-  border-radius: 6px;
+  border-radius: 3px;
   position: relative;
   right: 205px;
-  -webkit-transition: all 500ms linear;
-  transition: all 500ms linear;
+  -webkit-transition: 200ms border-color 100ms linear, 1000ms border-radius 200ms linear, 200ms width 100ms linear, 200ms border-width 100ms linear, -webkit-transform 300ms linear;
+  transition: 200ms border-color 100ms linear, 1000ms border-radius 200ms linear, 200ms width 100ms linear, 200ms border-width 100ms linear, -webkit-transform 300ms linear;
+  transition: transform 300ms linear, 200ms border-color 100ms linear, 1000ms border-radius 200ms linear, 200ms width 100ms linear, 200ms border-width 100ms linear;
+  transition: transform 300ms linear, 200ms border-color 100ms linear, 1000ms border-radius 200ms linear, 200ms width 100ms linear, 200ms border-width 100ms linear, -webkit-transform 300ms linear;
   cursor: pointer;
 }
 
@@ -1072,13 +1074,13 @@ footer > p::before {
 }
 
 .chkbx:checked ~ .checkmark {
-  border-radius: 0;
   width: 14px;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  border: 3px solid rgb(62, 187, 9);
-  border-top: rgba(227, 225, 225, 0);
-  border-left: rgba(227, 225, 225, 0);
+  border-width: 3px;
+  -webkit-transform: rotateZ(45deg) scale(1.3);
+          transform: rotateZ(45deg) scale(1.3);
+  border-color: rgb(62, 187, 9);
+  border-top-color: rgba(227, 225, 225, 0);
+  border-left-color: rgba(227, 225, 225, 0);
 }
 
 .form-button {
@@ -1107,8 +1109,4 @@ footer > p::before {
 
 .fancybox__content {
   background-color: transparent !important;
-}
-
-.fancybox__content > .fancybox__iframe > .f-button.is-close-btn {
-  top: -7px !important;
 }/*# sourceMappingURL=main.css.map */
