--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,11 +2,12 @@
 	background-image: url(../images/2b1966ee8e9994d4051d1154196acc0e.jpeg);
 	background-size: cover;
 	background-repeat: no-repeat;
-	height: 800px;
+	height: 100vh;
 	text-align: center;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	
 	clip-path: polygon(0% 0%, 100% 0, 100% 75%, 50% 100%, 0 75%);
 }
 
